[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "khc"
version = "0.0.0"
dependencies = [
    "paho-mqtt>=2.0.0",
    "pyserial>=3.5",
    "python-osc>=1.8.0",
    "mido>=1.3.0",    
    "python-rtmidi>=1.5.8",    
]

[tool.setuptools.packages.find]
where = ["src"]